src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__datum__is_null__sqlfunc_macro.snap
---
source: src/expr/src/scalar/func/impls/datum.rs
expression: info
---
Info {
    output_type_nullable: ColumnType {
        scalar_type: Bool,
        nullable: false,
    },
    output_type_nonnullable: ColumnType {
        scalar_type: Bool,
        nullable: false,
    },
    preserves_uniqueness: false,
    inverse: None,
    is_monotone: true,
    propagates_nulls: false,
    introduces_nulls: false,
    could_error: false,
}
